# tashlar

./: .gitignore  LICENSE  README.md  app.cpp  app.h  colors.h  command.cpp  command.h  cursor.cpp  cursor.h  document.cpp  document.h  dots.cpp  dots.h  editor.cpp  editor.h  explorer.cpp  explorer.h  extension.cpp  extension.h  gutter.cpp  gutter.h  history.cpp  history.h  keybinding.cpp  keybinding.h  main.cpp  meson.build  meson_options.txt  minimap.cpp  popup.cpp  popup.h  scripting.cpp  scripting.h  search.cpp  search.h  statusbar.cpp  statusbar.h  tabbar.cpp  tabbar.h  (+5 more)
data/: install.sh  keybinding.json  settings.json
data/extensions/configuration-editing/: package.json
data/extensions/extension-editing/: package.json
data/extensions/fsharp/syntaxes/: fsharp.tmLanguage.json
data/extensions/html-language-features/: package.json
data/extensions/html-language-features/server/: package.json
data/extensions/image-preview/: package.json
data/extensions/json-language-features/: package.json
data/extensions/markdown-language-features/: package.json
data/extensions/php/syntaxes/: php.tmLanguage.json
data/extensions/python/syntaxes/: MagicPython.tmLanguage.json
data/extensions/search-result/syntaxes/: searchResult.tmLanguage.json
data/extensions/theme-red/themes/: Red-color-theme.json
data/extensions/typescript-basics/syntaxes/: TypeScript.tmLanguage.json
data/extensions/typescript-language-features/: package.json
data/themes/ahmadawais.shades-of-purple-6.12.0/: .vsixmanifest  changelog.md  package.json
data/themes/dracula-theme.theme-dracula-2.22.1/theme/: dracula-soft.json
data/themes/dracula-theme.theme-dracula-2.23.1/: .vsixmanifest  CHANGELOG.md  README.md  package.json
data/themes/dracula-theme.theme-dracula-2.23.1/theme/: dracula-soft.json
data/themes/uloco.theme-bluloco-dark-3.1.1/: README.md  package.json
data/themes/uloco.theme-bluloco-light-3.1.1/: README.md  package.json
data/vscode/cpp/: package.json
data/vscode/dart/syntaxes/: dart.tmLanguage.json
data/vscode/html/: language-configuration.json
data/vscode/ipynb/: package.json
data/vscode/json/: package.json
data/vscode/julia/syntaxes/: julia.tmLanguage.json
data/vscode/markdown-language-features/: tsconfig.browser.json
data/vscode/markdown-math/: tsconfig.json
data/vscode/ms-vscode.js-debug/: nls.bundle.json  nls.metadata.header.json  nls.metadata.json  package.json
data/vscode/ms-vscode.js-debug-companion/: package.json
data/vscode/ms-vscode.js-debug/src/: extension.js  watchdog.bundle.js
data/vscode/ms-vscode.node-debug/: package.json
data/vscode/ms-vscode.node-debug2/: package.json
data/vscode/theme-seti/icons/: vs-seti-icon-theme.json
data/vscode/typescript-language-features/: package.json  package.nls.json
libs/: libonigmo.la  libonigmo.lai  libonigmo.so.6.0.5
libs/lite/: rencache.cpp  rencache.h  renderer.cpp  renderer.h  sdl_stbimage.cpp  sdl_stbimage.h  stb_image.cpp  stb_truetype.h
libs/tm-parser/: meson.build
libs/tm-parser/extensions/css-language-features/: package.json
libs/tm-parser/extensions/git/: package.json
libs/tm-parser/extensions/github-authentication/: package.json
libs/tm-parser/extensions/java/syntaxes/: java.tmLanguage.json
libs/tm-parser/extensions/javascript/syntaxes/: JavaScript.tmLanguage.json  JavaScriptReact.tmLanguage.json
libs/tm-parser/extensions/json-language-features/server/: package.json
libs/tm-parser/extensions/ms-vscode.js-debug-companion/: README.md  package.json
libs/tm-parser/extensions/ms-vscode.references-view/: package.json
libs/tm-parser/extensions/npm/: package.json
libs/tm-parser/extensions/r/syntaxes/: r.tmLanguage.json
libs/tm-parser/extensions/sql/syntaxes/: sql.tmLanguage.json
libs/tm-parser/extensions/typescript-basics/syntaxes/: TypeScriptReact.tmLanguage.json
libs/tm-parser/tests/: main.cpp
libs/tm-parser/tests-c/: main.cpp
libs/tm-parser/tests/cases/: test.cpp
libs/tm-parser/textmate/: textmate.cpp  textmate.h
libs/tm-parser/textmate/parser/: defines.h  grammar.cpp  grammar.h  meson.build  parser.cpp  pattern.cpp  pattern.h  reader.cpp
libs/tm-parser/textmate/scopes/: match.cpp  meson.build  parse.cpp  scope.cpp  types.h
libs/tm-parser/textmate/theme/: colors.h  meson.build  stringop.cpp  theme.cpp  theme.h  util.cpp  util.h
scripts/: colors.json  colors_to_h.js
src/: app.cpp  app.h  block.cpp  block.h  command.cpp  command.h  completer.cpp  completer.h  cursor.cpp  cursor.h  document.cpp  document.h  dots.cpp  dots.h  editor.cpp  editor.h  explorer.cpp  explorer.h  extension.cpp  extension.h  gem.cpp  gem.h  gutter.cpp  gutter.h  highlighter.cpp  highlighter.h  history.cpp  history.h  icons.cpp  icons.h  indexer.cpp  indexer.h  item.cpp  item.h  keybinding.cpp  keybinding.h  keyinput.cpp  main.cpp  minimap.cpp  minimap.h  (+26 more)
src/platform/: keyinput.cpp  render.cpp  render_null.cpp  render_sdl.cpp
src/render/: editor.cpp  explorer.cpp  gutter.cpp  keyinput.h  keyinput_sdl.cpp  minimap.cpp  popup.cpp  render.cpp  render.h  render_sdl.cpp  statusbar.cpp  tabbar.cpp
src/renderer/: curses.cpp
src/view/: app_view.cpp  app_view.h  editor_view.cpp  editor_view.h  explorer_view.cpp  explorer_view.h  gem_view.cpp  gem_view.h  gutter_view.cpp  gutter_view.h  keyinput.cpp  minimap_view.cpp  minimap_view.h  popup_view.cpp  popup_view.h  render.cpp  render.h  render_null.cpp  render_sdl.cpp  scrollbar_view.cpp  scrollbar_view.h  search_view.cpp  search_view.h  statusbar_view.cpp  statusbar_view.h  tabbar_view.cpp  tabbar_view.h  view.cpp  view.h  view_controls.cpp  view_controls.h
subprojects/jsoncpp-1.8.4/: meson.build
tests/: test.c  test.js  test.lua
tests/expected/: hello_word.cpp  multi_cursor.cpp
tests/fixtures/: hello_world.js  hello_world.lua  multi_cursor.js  multi_cursor.lua
tests/results/: multi_cursor.cpp
